fix: position of browse and create buttons #1424 (#1463)
* fix(footer): fixed the overlapping layout issue of browse and create button for small and medium sized devices

* fix: resolved merge conflicts

* fix: replaced email with meetup link

* fix: added email section

---------

--- a/src/plays/schulte-tables/styles.css
+++ b/src/plays/schulte-tables/styles.css
@@ -1,65 +1,65 @@
 /* enter stlyes here */
 .center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .col {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .game-title {
-    text-align: center;
-    font-size: 4rem;
+  text-align: center;
+  font-size: 4rem;
 }
 
 .table {
-    display: grid;
-    grid-template-columns: repeat(5, 60px);
-    border: 2px solid grey;
-    margin-top: 1rem;
+  display: grid;
+  grid-template-columns: repeat(5, 60px);
+  border: 2px solid grey;
+  margin-top: 1rem;
 }
 
 .btn {
-    height: 60px;
-    border: none;
-    outline: none;
-    font-size: 18px;
-    cursor: pointer;
+  height: 60px;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  cursor: pointer;
 }
 
 .flex {
-    display: flex;
-    width: 300px;
-    margin: 0 auto;
-    justify-content: space-between;
+  display: flex;
+  width: 300px;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 
 .start-btn {
-    background: #278383;
-    padding: .6rem 3rem;
-    font-size: 18px;
-    border: 1px solid #062c2c;
-    outline: none;
-    color: aliceblue;
-    border-radius: 50px;
-    text-transform: uppercase;
-    cursor: pointer;
+  background: #278383;
+  padding: 0.6rem 3rem;
+  font-size: 18px;
+  border: 1px solid #062c2c;
+  outline: none;
+  color: aliceblue;
+  border-radius: 50px;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 
 .result-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .hints {
-    margin: 1rem;
+  margin: 1rem;
 }
-.description{
-    max-width: 500px;
-    text-align: center;
-    margin: 2rem auto;
+.description {
+  max-width: 500px;
+  text-align: center;
+  margin: 2rem auto;
 }
